<resources>
    <string name="app_name">Inventory</string>

    <string name="action_insert_dummy_data">Insert Dummy Data</string>

    <string name="action_delete_all_entries">Delete All Products</string>

    <string name="editor_activity_title_new_pet">Add a Product</string>

    <string name="action_save">Save</string>

    <string name="action_delete">Delete</string>
    <string name="overview">Overview</string>
    <string name="hint_product_name">Name</string>
    <string name="hint_price">price</string>
    <string name="hint_quantity">quantity</string>
    <string name="category_supplier">supplier</string>
    <string name="hint_supplier_name">Supplier Name</string>
    <string name="hint_supplier_phone">Supplier Phone</string>
    <string name="empty_view_text">the shelves are a bit empty</string>
    <string name="empty_view_subtext">Start by adding some products</string>
    <string name="unsaved_changes_dialog_msg">Discard your changes and quit editing?</string>
    <string name="discard">Discard</string>
    <string name="keep_editing">Keep Editing</string>

    <string name="editor_delete_product_successful">Product deleted</string>
    <string name="editor_delete_product_failed">Error with deleting product</string>
    <string name="delete_dialog_msg">Delete this product?</string>
    <string name="delete">Delete</string>
    <string name="cancel">Cancel</string>
    <string name="sale">sale</string>

</resources>
